feat: added aktivitätsdiagramme (UML) und klassendiagramme

--- a/src/teachings/es/UML-Diagramme/use-case-kopfschuss.mdx
+++ b/src/teachings/es/UML-Diagramme/use-case-kopfschuss.mdx
@@ -34,4 +34,24 @@ Wichtig sind hier vorallem:
 
 ### Wir beginnen mit dem Use-Case Diagramm (es ist auch das erste was man vermutlich machen würde)
 
+
+### Aktivitätsdiagramm (AD)
+Diese Diagramme werden oft als Verfeinerung von Use-Case-Diagrammen benutzt, und beschreiben Verhalten.
+
+![Aktivitätsdiagramm](/teaching-assets/es/Aktivitätsdiagramm.svg)
+
+Das ist auch alles was man da wissen muss. Achtet darauf, Gabelungen und Verzweigungen immer zusammenzuführen!!
+
+
+Verzweigungen vs. Gabelungen: Bei Verzweigungen nimmt man einen Pfad **oder** den anderen, 
+bei Gabelungen nimmt man zwingend beide, und macht auch erst weiter, wenn beide abgeschlossen sind. 
+Die Aktionen werden hier also parallel ausgeführt.
+
+Optional:
+
+Man kann Aktivitäten auf Akteure aufteilen, in dem man bspw Aktion A in die Swim Lane von Akteur 1 schreibt.
+
+Objekte können auch eingefügt werden, immer dann wenn ein Objekt von einer in die nächste Aktivität übertragen wird
+(bspw ein Protokoll oder so, wird in Aktion A erstellt und in Aktion B verwendet)
+
 [^1]: [Wikipedia Use-Case-Diagramm](https://de.wikipedia.org/wiki/Use-Case-Diagramm)
