--- a/src/teachings/es/UML-Diagramme/KlassendiaGramm.mdx
+++ b/src/teachings/es/UML-Diagramme/KlassendiaGramm.mdx
@@ -1,6 +1,6 @@
 ---
-title: Klasse ist das jetzt nicht so (Klassendiagramme)
-description: Klasse ist das jetzt nicht so (Klassendiagramme)
+title: KlassendiaGramm (Klassendiagramme)
+description: Überblick über Klassendiagramme und all ihren Erben
 order: 3
 author: Kristina Pankert
 ---
@@ -25,3 +25,7 @@ Dagegen Aggregation: "Klasse an der Raute" hat ein "Klasse ohne Raute". Ist aber
 Das Ding oben rechts mit den mehreren Kästchen nennt sich "Qualifizierte Assoziation". Das kleine Kästchen ist dann der Qualifkator mit Attribut der Zielklasse oder mit Typangabe.
 
 Ein Paket ist einfach eine Gruppe von Klassen, die stark miteinander assoziiert sind, und möglichst schwach mit anderen Klassen (aus anderen Paketen).
+
+### Objektdiagramm (OD)
+Das ist im Grunde ein Klassendiagramm nur in konkret: Also der Titel einer Klasse ist nicht mehr "Klasse" sondern "Objektname:Typ" wobei der Typ ungefähr einer Klasse entspricht.
+Das bedeutet es gibt nur noch konkrete Objekte, haben aber fast die gleichen Assoziationsarten wie in einem CD.
