--- a/src/teachings/scil/Turing-die-Maschine.mdx
+++ b/src/teachings/scil/Turing-die-Maschine.mdx
@@ -8,3 +8,5 @@ order: 1
 ## Berechenbarkeit
 
 Ja ich mach ja schon hör auf zu stressen, schreib erstmal SWT.
+
+![Turing in Buff](/teaching-assets/scil/maschine-turing.png)
