feat: feature diagramme

--- a/src/teachings/es/Feature-deine-5-0.mdx
+++ b/src/teachings/es/Feature-deine-5-0.mdx
@@ -5,6 +5,23 @@ order: 7
 author: Jonas Schneider
 ---
 
-5.0 in SWT ist schon schwach.
+> 5.0 in SWT wäre schon schwach.
 
-Kommen bald.
+![Feature-Diagramm](/teaching-assets/es/feature-diagramm.svg)
+
+Feature Diagramme, zeigen die möglichen Zusammensetzung von einem Produkt. 
+Ein Auto muss folgende Features enthalten:
+- Tacho
+- Motor
+- Blinker
+- $\vdots$
+
+Aber es kann zudem noch optional enthalten, (die sich teilweise gegenseitig ausschließen oder nicht):
+- Navi
+- Klimaanlage
+- Lachgaseinspritzung
+- $\vdots$
+
+Ein Produkt kann dann aus den Sachen gebildet werden. Eine Objekt setzt man dann einfach die Kästen/Features zusammen die man hat und lässt die Striche und Kreise weg.
+
+Das wars halt legit schon.
