--- a/src/teachings/es/AllGemeinwissen.mdx
+++ b/src/teachings/es/AllGemeinwissen.mdx
@@ -11,6 +11,12 @@ Warum ist SWT eigentlich so random und unstrukturiert. Wofür war dieser kleine 
 
 oder der Ausflug zu den Programmierparadigmen wie Objektorientierung, warum das ganze nochmal...
 
+## Kopplung und Kohäsion
+Ist vermutlich wichtig, aber auch wenig
+
+> Kohäsion ist ein Maß für die innere Zusammengehörigkeit von Elementen eines Moduls. Heißt wenn es ein Element gibt, dass nicht mit den anderen Elementen zutun hat, ist die Kohäsion niedrig. $\Rightarrow$ Höhe Kohäsion, mehr besser
+
+> Kopplung ist das Maß der Zusammenhang zwischen Modulen. Man möchte zum Beispiel das UI Framework doch auch vielleicht mal austauschen, hierfür braucht man Schwache Kopplung $\Rightarrow$ Schwache Kopplung, weniger = besser
 ## Prototyping
 
 Prototyping ist eigentlich das was ich hier gerade betreibe, eine Vorversion von etwas, um es zu testen. Es gibt die Folgenden Subarten:
@@ -67,6 +73,7 @@ x> Verfickte scheiße lernt endlich *git*, es ist nicht schwer.
 ## Automatisierungen
 
 Make, Gradle etc. sind Build-Tools. Sie können automatisch die Abhängigkeiten von Projekten herstellen und die Projekte compilen/builden.
+
 
 ## Sonstiges
 
