--- a/src/teachings/es/Feature-deine-5-0.mdx
+++ b/src/teachings/es/Feature-deine-5-0.mdx
@@ -25,3 +25,12 @@ Aber es kann zudem noch optional enthalten, (die sich teilweise gegenseitig auss
 Ein Produkt kann dann aus den Sachen gebildet werden. Eine Objekt setzt man dann einfach die Kästen/Features zusammen die man hat und lässt die Striche und Kreise weg.
 
 Das wars halt legit schon.
+
+OKE Doch nicht
+
+## Erweiterungen
+
+Es gibt noch Erweiterung zu den dummen Dingern.
+- *excludes*, *requires*: Das was es sagt. Allerdings ist wichtig zu wissen, dass die in der Klausur auch ungültige Konfiguration machen können z.B. wenn es ein OR mit A und B gibt, aber A B ausschließt und B A requires.   
+- Directed Acyclic Graph: Radio und Nav können zu einer Radio Navi-Kombi zusammengefasst werden.
+ 
