--- a/src/teachings/es/Entwurfsmuss-nicht-sein.mdx
+++ b/src/teachings/es/Entwurfsmuss-nicht-sein.mdx
@@ -4,6 +4,7 @@ description: Ein Überblick über die wichtigsten Entwurfsmuster
 author: Jonas Schneider
 date: 09/02/2023
 order: 4
+tags: [Entwurfsmuster, Adapter, Composite, Decorator, Factory, Observer, Singleton, CommandProcessor, Tips]
 ---
 
 ## Einordnung
