--- a/src/teachings/es/KlassendiaGramm.mdx
+++ b/src/teachings/es/KlassendiaGramm.mdx
@@ -3,6 +3,8 @@ title: KlassendiaGramm (Klassendiagramme)
 description: Überblick über Klassendiagramme und all ihren Erben
 order: 3
 author: Kristina Pankert
+date: 10/02/2023
+tags: [Klassendiagramme, Objektdiagramme, CD, OD]
 ---
 
 
