--- a/src/teachings/es/Klausur-19-20-Probeklausur.mdx
+++ b/src/teachings/es/Klausur-19-20-Probeklausur.mdx
@@ -3,6 +3,7 @@ title: Probeklausur Wintersemester 19/20
 description: Meine Lösungen für die Probeklausur (Wintersemester 19/20) für die Vorlesung Einführung in die Softwaretechnik.
 order: 9
 author: Jonas Schneider
+date: 12/02/2023
 ---
 
 ## Vorwort
