--- a/src/teachings/es/Zustand des Verzweifelns.mdx
+++ b/src/teachings/es/Zustand des Verzweifelns.mdx
@@ -3,6 +3,8 @@ title: Zustand des Verzweifelns (Zustandsdiagramme)
 description: Zustandsdiagramme/State Charts
 order: 5
 author: Kristina Pankert
+date: 13/02/2023
+tags: [Statecharts, SC]
 ---
 
 ### Zustandsdiagramm/State Chart (SC)
@@ -13,3 +15,5 @@ Es können auch Pfeile von einem Zustand auf sich selbst, usw.
 
 Es gibt, wie den Pfeil unten, auch Transitionen, die an eine Bedingung geknüpft sind.
 Bspw. könnte man den Methodenaufruf schreibeKlausur() mit [angemeldet] ergänzen.
+
+x> Zu den Endzuständen im Oberzustand... In der Vorlesung gibt es keine. In Glob 3 gibt es einen. Also bei der Einsicht hat man da bestimmt Freiheiten, aber ich würde bei einem expliziten Ende vielleicht einen machen und wenn man jederzeit "raus" kann keinen oder so.
