--- a/src/teachings/es/n-unit-testen.mdx
+++ b/src/teachings/es/n-unit-testen.mdx
@@ -4,6 +4,7 @@ description: Alle wolles es, alle finden es praktisch, keiner hat Bock drauf => 
 order: 6
 author: Jonas Schneider
 date: 11/02/2023
+tags: [Unit-Testing, Kontrollflussgraphen]
 ---
 
 ## Codequalität - was das
