--- a/src/teachings/es/use-case-kopfschuss.mdx
+++ b/src/teachings/es/use-case-kopfschuss.mdx
@@ -3,6 +3,8 @@ title: Use-Case-Kopfschuss (UML Use Case Diagram)[sicher]
 description: UML Use Case Diagramme 
 order: 2
 author: Jonas Schneider
+date: 11/02/2023
+tags: [Analyse, UML, Use-Case, Diagramm, Aktivitätsdiagramm, AD, Use-Case-Diagramm, UC]
 ---
 
 ## Einordnung
@@ -40,6 +42,8 @@ Wichtig sind hier vorallem:
 
 ### Wir beginnen mit dem Use-Case Diagramm (es ist auch das erste was man vermutlich machen würde)
 
+x> Der Diagrammtyp von Use-Case-Diagrammen ist **UC**
+
 ![Use-Case-Diagramm](/teaching-assets/es/use-case-diagramm.png)
 
 Das erste Oben ist das eigentlich Use-Case Diagramm. Ein **Use-Case** ist eine Folge von Dingen, die ein System ausführen kann, wenn es mit wem interagiert.
@@ -52,6 +56,9 @@ Aber da ich ja auch noch SWT schreibe, enthalte ich auch die Rolle "du", also ei
 <RumpeQuiz/>
 
 ### Aktivitätsdiagramm (AD)
+
+x> Der Diagrammtyp von Aktivitätsdiagrammen ist **AD**
+
 Diese Diagramme werden oft als Verfeinerung von Use-Case-Diagrammen benutzt, und beschreiben Verhalten.
 
 ![Aktivitätsdiagramm](/teaching-assets/es/Aktivitätsdiagramm.svg)
