--- a/src/teachings/es/Feature-deine-5-0.mdx
+++ b/src/teachings/es/Feature-deine-5-0.mdx
@@ -3,7 +3,11 @@ title: Feature-deine-5.0 (Feature-Diagramme)
 description: Feature-Diagramme für Anforderungsanalyse
 order: 7
 author: Jonas Schneider
+date: 13/02/2023
+tags: [Feature-Diagramme, Feature-Diagramm-Erweiterungen, Semantische-Differenz, FD]
 ---
+
+x> Der Diagrammtyp ist FD
 
 > 5.0 in SWT wäre schon schwach.
 
@@ -34,3 +38,10 @@ Es gibt noch Erweiterung zu den dummen Dingern.
 - *excludes*, *requires*: Das was es sagt. Allerdings ist wichtig zu wissen, dass die in der Klausur auch ungültige Konfiguration machen können z.B. wenn es ein OR mit A und B gibt, aber A B ausschließt und B A requires.   
 - Directed Acyclic Graph: Radio und Nav können zu einer Radio Navi-Kombi zusammengefasst werden.
  
+## Semantische Differenz
+
+Sei $a$ und $b$ zwei Feature-Diagramme.
+
+Die Semantische Differenz ist nun die Anzahl der **gültigen** Konfigurationen von $a$, die aber **keine** **gültigen** Konfigurationen von $b$ sind.
+
+Ein Feature-Diagramm heißt eine *Verfeinerung* von $b$, wenn die Semantische Differenz von $a$ zu $b$ $\emptyset$ ist. (Nicht verstanden?: Es heißt Verfeinerung, da alle Konfiguration von $b$ auch in $a$ sind. Andersherum natürlich nicht unbedingt.)
