--- a/src/teachings/scil/Turing-die-Maschine.mdx
+++ b/src/teachings/scil/Turing-die-Maschine.mdx
@@ -3,6 +3,7 @@ title: Turing-die-Maschine (Turingmaschinen)
 description: Einführung in die Turingmaschine, Beweise kommen später
 author: Jonas Schneider
 order: 1
+tags: [Einführung, Berechenbarkeit, Turingmaschine]
 ---
 
 ## Berechenbarkeit
