--- a/src/teachings/es/Zustand des Verzweifelns.mdx
+++ b/src/teachings/es/Zustand des Verzweifelns.mdx
@@ -16,4 +16,4 @@ Es können auch Pfeile von einem Zustand auf sich selbst, usw.
 Es gibt, wie den Pfeil unten, auch Transitionen, die an eine Bedingung geknüpft sind.
 Bspw. könnte man den Methodenaufruf schreibeKlausur() mit [angemeldet] ergänzen.
 
-x> Zu den Endzuständen im Oberzustand... In der Vorlesung gibt es keine. In Glob 3 gibt es einen. Also bei der Einsicht hat man da bestimmt Freiheiten, aber ich würde bei einem expliziten Ende vielleicht einen machen und wenn man jederzeit "raus" kann keinen oder so.
+x> Zu den Endzuständen im Oberzustand... In der Vorlesung gibt es keine. In Glob 3 gibt es einen. Also bei der Einsicht hat man da bestimmt Freiheiten, aber ich würde bei einem expliziten Ende (wo man nur da raus darf) vielleicht einen machen und wenn man jederzeit "raus" kann keinen oder so.
