mehr rumpe quotes

--- a/src/teachings/es/Klausur-19-20-Probeklausur.mdx
+++ b/src/teachings/es/Klausur-19-20-Probeklausur.mdx
@@ -3,7 +3,7 @@ title: Probeklausur Wintersemester 19/20
 description: Meine Lösungen für die Probeklausur (Wintersemester 19/20) für die Vorlesung Einführung in die Softwaretechnik.
 order: 9
 author: Jonas Schneider
-date: 12/02/2023
+date: 13/02/2023
 ---
 
 ## Vorwort
@@ -37,6 +37,8 @@ Tipp: Achten Sie darauf, dass Kontrollknoten in Ihrem Aktivitätsdiagramm paarwe
   </div>
 </Spoiler>
 
+x> Korrigiert! Hatte die If's nicht zusammengeführt. Sollte man am besten machen.
+
 ## Aufgabe 2 (Klassendiagramme)
 
 ### a)
@@ -60,6 +62,8 @@ angegeben wird.
   </div>
 </Spoiler>
 
+x> Korrigiert! Hatte bissle was Falsch
+
 ### b)
 
 Da die Algorithmen zu Beginn nicht auf den GUI Elementen ausgeführt werden können, soll 
@@ -79,6 +83,8 @@ Erweitern Sie Ihr Klassendiagramm aus Teilaufgabe a) entsprechend um das Entwurf
     ![A2b](/teaching-assets/es/ws19/A2b.svg)
   </div>
 </Spoiler>
+
+x> Korrigiert! Hatte bissle was Falsch
 
 ### c)
 
