korrektur der Klausur

--- a/src/teachings/es/Klausur-19-20-Probeklausur.mdx
+++ b/src/teachings/es/Klausur-19-20-Probeklausur.mdx
@@ -3,7 +3,8 @@ title: Probeklausur Wintersemester 19/20
 description: Meine Lösungen für die Probeklausur (Wintersemester 19/20) für die Vorlesung Einführung in die Softwaretechnik.
 order: 9
 author: Jonas Schneider
-date: 13/02/2023
+date: 14/02/2023
+tags: [Klausur, Eigenlösungen]
 ---
 
 ## Vorwort
@@ -178,8 +179,16 @@ erreichbar sind, obwohl es keine Menge von Eingaben gibt, sodass jede Anweisung 
 
 Falls Sie diese Frage negativ beantworten, dann begründen Sie die Antwort. Falls Sie die Frage positiv beantworten, dann geben Sie eine Methode an (z.B. in Java), die obiges erfüllt.
 
+x> Korrektur! War zu lost
+
 <Spoiler>
-  Nein, denn es ist nicht möglich ohne alle möglichen Eingaben anzuwenden. (bin bissle lost verstehe die Frage nur im BuK Kontext)
+  ```
+  if(false)
+    return 420;
+  return 69;
+  ```
+
+  Hier wird natürlich nie `420` ausgegeben. Somit gibt es auch keine Menge an Eingaben, die die Anweisung ausführt.
 </Spoiler>
 
 ### d)
