--- a/src/teachings/scil/Dein-Leben-Problemsammlung.mdx
+++ b/src/teachings/scil/Dein-Leben-Problemsammlung.mdx
@@ -1,10 +1,10 @@
 ---
 title: Dein Leben (Problemsammlung)
-description: Alle Probleme, die wir in der Vorlesung und in den Übungen besprochen haben.
+description: Alle Probleme, die wir in der Vorlesung, Tutorium und in den Übungen gehabt haben.
 author: Jonas Schneider
 order: 1
 tags: [Probleme, Vorlesung, Übung]
-date: 15/02/2023
+date: 16/02/2023
 ---
 
 ## Berechenbarkeit
@@ -29,8 +29,8 @@ Sind nicht viele :D
 - PKP $((S_n, \circ, id))$ | Übung 06
 
 
-### Unentscheidbar
-Alle unentscheidbaren Probleme (sind ne Menge):
+### Nicht Entscheidbar
+Alle Probleme die Nicht Entscheidbar sind (Sie können ggf. noch semi-entscheidbar sein wenn sie unten aufgelistet sind):
 
 ?> Ich nenne hier keine Komplemente, da wie ihr bestimmt wisst, die Komplemente von unentscheidbaren Problemen auch unentscheidbar sind.
 
@@ -65,6 +65,7 @@ Alle semi-entscheidbaren Probleme (Eigentlich sind *fast* alle unentscheidbaren 
 
 - Halteproblem | VO
 - Spezielle Halteproblem | VO
+- $\overline{Diagonalsprache}$ | VO 
 - $L_{17} = $ \{ $\langle M \rangle \mid$ *M* berechnet bei Eingabe der Zahl 17 die Zahl 42} | VO
 - $H_{42} = $ \{ $\langle M \rangle \mid$ Auf jeder Eingabe hält *M* nach höchstens 42 Schritten} | VO
 - Hilberts 10. Problem ($N = $ \{ $p \mid p$ ist ein Polynom mit einer ganzzahligen Nullstelle \}) | VO
