fix: Collatz-Problem + Unterprogrammtechnik

--- a/src/teachings/scil/Turing-die-Maschine.mdx
+++ b/src/teachings/scil/Turing-die-Maschine.mdx
@@ -136,3 +136,5 @@ Unsere Gödelnummer nach Vorlesung funktioniert so:
 Die Universelle Turingmaschine $U$ muss dann nur noch prüfen, ob die Eingabe eine korrekte Gödelnummer ist und simuliert sie dann auf 3 Bändern. Band zwei ist die Übergangsfunktion und Band 3 für den Zustand.
 
 > Eine Universelle TM kann eine 1-Band-TM in konstantem Zeitverlust simulieren.
+
+> $\langle M \rangle$ ist die Gödelnummer von $M$.   
