fix: better names

--- a/src/teachings/scil/Unterprogrammtech-nik.mdx
+++ b/src/teachings/scil/Unterprogrammtech-nik.mdx
@@ -1,8 +1,8 @@
 ---
-title: Unterprogrammtechnik (Unterprogrammtechnik & Berechenbarkeitsbeweise)
+title: Unterprogrammtech-nick (Unterprogrammtechnik & Berechenbarkeitsbeweise)
 description: Ein Tutorial für Unterprogrammtechniken
 author: Jonas Schneider
-date: 16/02/2023
+date: 17/02/2023
 tags: [Berechenbarkeit, Unterprogrammtechnik, Berechenbarkeitsbeweise]
 order: 4
 ---
@@ -33,6 +33,8 @@ Somit kann $D$ nicht entscheidbar sein.
 > Das Komplement von unentscheidbaren Problemen, ist selber unentscheidbar. Beispiel $\overline{D}$.
 
 ## Unterprogrammtechnik
+
+![Tech-nick](https://pbs.twimg.com/media/DMgs9SmWsAAwtRp.jpg)
 
 Mit der Unterprogrammtechnik lässt sich außerhalb vom Satz von Rice zeigen, dass eine Sprache unentscheidbar ist. Wie funktioniert es genau hier für das Beispiel des Halteproblems $H$:
 
