--- a/src/teachings/scil/grohendes Ende.mdx
+++ b/src/teachings/scil/grohendes Ende.mdx
@@ -1,5 +1,5 @@
 ---
-title: Random Shit
+title: Grohendes Ende (Sonstiges)
 description: Alles übrig gebliebene aus der BuK Vorlesung
 date: 16/02/2023
 author: Jonas Schneider
